Sort responsivness from highest to lowest px

--- a/src/index.html
+++ b/src/index.html
@@ -90,9 +90,9 @@
   
         <!-- ! About -->
         <section class="about disabled" id="about">
-          <h1 class="projects-main-heading">About</h1>
+          <h1 class="about-main-heading">About</h1>
           <div class="about-container-media-query">
-            <div class="projects-main-container">
+            <div class="about-main-container">
               <div class="about-branding-picture">
                 <div class="positioning-about-main-heading-media-query">
                   <p class="positioning-about-main-heading">From History master to junior software engineer! Is it a movie? No, 
@@ -106,8 +106,7 @@
                     initially chose another career, but finally decided to follow my dreams and 
                     become a software engineer. I am someone who likes to experiment, imagine 
                     and create something new, be it in Arts, be it something written in code. 
-                    I am what they call a creative thinker. The thrill of making my code work gives me even more motivation to learn 
-                    more.
+                    I am what they call a creative thinker. The thrill of making my code work gives me even more motivation to learn more.
                   </p>
                 </div>
               </div>
