Sorting issues with responsivnes (top-bottom view)

--- a/src/index.html
+++ b/src/index.html
@@ -275,8 +275,7 @@
         <!-- ! Experience & Education-->
   
         <section class="experiences" id="experiences">
-          <h1 class="experiences-main-heading">Experience</h1>
-  
+          <h2 class="experiences-main-heading"><span class="exper">Exper</span><span class="ience">ience</span></h2>
           <div class="experiences-education-wannabe-table experiences-media-query-phone">
             <div class="experiences-left-side">
               <div class="experiences-description experiences-two-padding">
