--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <link rel="stylesheet" href="styles/main.css">
   <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
   <title>Vania Tominc Portofolio</title>
@@ -17,7 +17,8 @@
       <span></span>
       <span></span>
     </div>
-    <div class="scroll-home home-button"></div>
+    <div class="scroll-home"></div>
+    <div class="home-button"></div>
 
     <div class="cursor-normal">
       <div class="toggle-button-position">
