--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/main.css">
   <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
   <title>Vania Tominc Portofolio</title>
@@ -20,22 +20,23 @@
     <div class="scroll-home"></div>
     <div class="home-button"></div>
 
+    <div class="toggle-button-position">
+      <button id="dark-mode-toggle" class="dark-mode-toggle">
+        <svg width="100%" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 496"><path fill="currentColor" d="M8,256C8,393,119,504,256,504S504,393,504,256,393,8,256,8,8,119,8,256ZM256,440V72a184,184,0,0,1,0,368Z" transform="translate(-8 -8)"/></svg>
+      </button>
+    </div>
+
+    <div class="scrolls">
+      <span class="scroll-indicator-line"></span>
+      <div class="center"><span>mouse <br> scrolling</span></div>
+      <span class="scroll-indicator-line"></span>
+    </div>
+
     <div class="cursor-normal">
-      <div class="toggle-button-position">
-        <button id="dark-mode-toggle" class="dark-mode-toggle">
-          <svg width="100%" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 496"><path fill="currentColor" d="M8,256C8,393,119,504,256,504S504,393,504,256,393,8,256,8,8,119,8,256ZM256,440V72a184,184,0,0,1,0,368Z" transform="translate(-8 -8)"/></svg>
-        </button>
-      </div>
   
       <div>  <!-- class="cursor-outside-container" -->
   
         <!-- ! Landing page -->
-  
-        <div class="scrolls">
-          <span class="scroll-indicator-line"></span>
-          <div class="center"><span>mouse <br> scrolling</span></div>
-          <span class="scroll-indicator-line"></span>
-        </div>
         <div class="homepage-container">
           <div class="putting-margin-to-home-page">
             <header>
