--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
 
   <body>   <!-- class="cursor-outside-container" -->
 
-    <div class="nav-icon">
+    <!-- <div class="nav-icon">
       <span></span>
       <span></span>
       <span></span>
       <span></span>
-    </div>
+    </div> -->
     <div class="scroll-home"></div>
     <div class="home-button"></div>
 
