--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,6 @@
 
   <body>   <!-- class="cursor-outside-container" -->
 
-    <div class="scroll-home"></div>
-    <div class="home-button"></div>
-
-    <div class="scrolls">
-      <span class="scroll-indicator-line"></span>
-      <div class="center"><span>mouse <br> scrolling</span></div>
-      <span class="scroll-indicator-line"></span>
-    </div>
-
     <div class="outside-buttons">
       <div class="nav-icon">
         <span></span>
@@ -35,8 +26,18 @@
       </div>
     </div>
 
+    <div class="scroll-home home-button"></div>
+
     <div class="cursor-normal">
   
+      <!-- <div class="home-button"></div> -->
+
+      <div class="scrolls">
+        <span class="scroll-indicator-line"></span>
+        <div class="center"><span>mouse <br> scrolling</span></div>
+        <span class="scroll-indicator-line"></span>
+      </div>
+
       <div>  <!-- class="cursor-outside-container" -->
   
         <!-- ! Landing page -->
