Testing new hamburger icon

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,14 @@
   <body>   <!-- class="cursor-outside-container" -->
 
     <div class="outside-buttons">
-      <div class="nav-icon">
+      <!-- <div id="nav-icon">
         <span></span>
         <span></span>
         <span></span>
         <span></span>
+      </div> -->
+      <div id="hamburger">
+        <div class="hamburger-icon"></div>
       </div>
   
       <div class="toggle-button-position">
@@ -45,7 +48,7 @@
 
           <div class="putting-margin-to-home-page">
             <header>
-              <div class="side-navbar">
+              <div id="side-navbar">
                 <nav>
                   <div class="top-navbar">
                     <a href="#about"><h2>About</h2></a>
@@ -69,29 +72,7 @@
           </div>
         </div>
   
-        <!-- <div class="section-home" data-scroll-container>
-          <section class="section-home-1" data-scroll-section>
-            <h1>You should subscribe</h1>
-            <p>
-              I have always been interested in coding, 
-              initially chose another career, but finally decided to follow my dreams and 
-              become a software engineer. I am someone who likes to experiment, imagine 
-              and create something new, be it in Arts, be it something written in code. 
-              The thrill of making my code work gives me even more motivation to learn 
-              more.
-            </p>
-          </section>
-          <section class="section-home-1 section2" id="my-section" data-scroll-section>
-            <h1 data-scroll data-scroll-speed="3">You should subscribe</h1>
-            <p data-scroll-class="scroll-class" data-scroll-repeat="true" data-scroll data-scroll-speed="2" class="custom-p">
-              I have always been interested in coding, 
-              initially chose another career, but finally decided to follow my dreams and 
-              become a software engineer. I am someone who likes to experiment, imagine 
-              and create something new, be it in Arts, be it something written in code. 
-              The thrill of making my code work gives me even more motivation to learn 
-              more.
-            </p>
-          </section> -->
+
         </div>
       
   
@@ -109,11 +90,11 @@
                 <div class="about-paragraph">
                   <img src="images/IMG_5632.png" alt="my picture" class="my-photo my-photo-positioning" />
                   <p class="accordion-text-paragraph positioning-brand-statement-paragraph">
-                    I have always been interested in coding, 
-                    initially chose another career, but finally decided to follow my dreams and 
-                    become a software engineer. I am someone who likes to experiment, imagine 
-                    and create something new, be it in Arts, be it something written in code. 
-                    I am what they call a creative thinker. The thrill of making my code work gives me even more motivation to learn more.
+                    From History master to Junior Software Engineer! Is it a movie? No, it is just a true story about me. 
+                    I have always been interested in coding, initially chose another career, but finally decided to follow my dreams 
+                    and become a Software Engineer. I am someone who likes to experiment, imagine and create something new, be it in Arts, 
+                    be it something written in code. I am what they call a creative thinker.The thrill of making my code work gives me even 
+                    more motivation to learn more.
                   </p>
                 </div>
               </div>
