--- a/src/index.html
+++ b/src/index.html
@@ -265,49 +265,52 @@
         <section class="experiences" id="experiences">
           <h2 class="experiences-main-heading"><span class="exper">Exper</span><span class="ience">ience</span></h2>
           <div class="experiences-education-wannabe-table experiences-media-query-phone">
-            <div class="experiences-left-side">
-              <div class="experiences-description experiences-two-padding">
-                <h3>SOFTWARE ENGINEERING IMMERSIVE STUDENT <span class="span-slash">|</span> General Assembly</h3>
-                <h5>London, UK | May 2021 - Jul 2021</h5>
-                <ul class="dashed">
-                  <li class="accordion-text-paragraph">
-                    A 12-week (full-time) coding bootcamp designed for a career transformation. 
-                    During the course, we had daily stand-ups, online-lessons, and labs. 
-                    With projects at the end of each module, I learnt how to build a full-stack 
-                    app by either pair-coding or individual-coding. 
-                  </li>
-                </ul>
-              </div>
-              <div class="experiences-description experiences-two-padding">
-                <h3>PERSONAL ASSISTANT <span class="span-slash">|</span> Active Care Group</h3>
-                <h5>Nationwide UK | Feb 2019 - Aug 2021</h5>
-                <ul class="dashed">
-                  <li class="accordion-text-paragraph">Supporting people with spinal cord injury to live an independent and active life.</li>
-                  <li class="accordion-text-paragraph">Outstanding personal qualities applied: respectful, empathetic, reliable, patient, observant, good communication skills.</li>
-                </ul>
-              </div>
-              <br />
-              <div class="experiences-description experiences-two-padding">
-                <h3>TOURIST GUIDE <span class="span-slash">|</span> Postojnska jama d.d.</h3>
-                <a href="https://www.postojnska-jama.eu/en/" target="_blank"></a>
-                <h5>Postojna, Slovenia | Jun 2006 - Oct 2018</h5>
-                <ul class="dashed">
-                  <li class="accordion-text-paragraph">Ability to perform, animate and communicate in public in a variety of different foreign languages and working in a multicultural, international environment.</li>
-                  <li class="accordion-text-paragraph">Organizational and project management skills - guiding big or smaller groups (100+ people) in a specific time amount and in limited space, helping with organizing small events.</li>
-                  <li class="accordion-text-paragraph">Ability to identify the needs of the target audience.</li>
-                </ul>
-              </div>
-              <div class="experiences-description">
-                <h3>BA and MSc STUDENT <span class="span-slash">|</span> University of Ljubljana</h3>
-                <h5>Ljubljana, Slovenia | Sep 2005 - Sep 2016</h5>
-                <ul class="bullet-right dashed">
-                  <li class="accordion-text-paragraph">Two subject pre-Bologna Non Pedagogical Programme: Spanish and History.</li>
-                </ul>
-              </div>
+            <div class="experiences-media-left-side">
+              <div class="experiences-left-side">
+                <div class="experiences-description experiences-two-padding">
+                  <h3>SOFTWARE ENGINEERING IMMERSIVE STUDENT <span class="span-slash">|</span> General Assembly</h3>
+                  <h5>London, UK | May 2021 - Jul 2021</h5>
+                  <ul class="dashed">
+                    <li class="accordion-text-paragraph">
+                      A 12-week (full-time) coding bootcamp designed for a career transformation. 
+                      During the course, we had daily stand-ups, online-lessons, and labs. 
+                      With projects at the end of each module, I learnt how to build a full-stack 
+                      app by either pair-coding or individual-coding. 
+                    </li>
+                  </ul>
+                </div>
+                <div class="experiences-description experiences-two-padding">
+                  <h3>PERSONAL ASSISTANT <span class="span-slash">|</span> Active Care Group</h3>
+                  <h5>Nationwide UK | Feb 2019 - Aug 2021</h5>
+                  <ul class="dashed">
+                    <li class="accordion-text-paragraph">Supporting people with spinal cord injury to live an independent and active life.</li>
+                    <li class="accordion-text-paragraph">Outstanding personal qualities applied: respectful, empathetic, reliable, patient, observant, good communication skills.</li>
+                  </ul>
+                </div>
+                <br />
+                <div class="experiences-description experiences-two-padding">
+                  <h3>TOURIST GUIDE <span class="span-slash">|</span> Postojnska jama d.d.</h3>
+                  <a href="https://www.postojnska-jama.eu/en/" target="_blank"></a>
+                  <h5>Postojna, Slovenia | Jun 2006 - Oct 2018</h5>
+                  <ul class="dashed">
+                    <li class="accordion-text-paragraph">Ability to perform, animate and communicate in public in a variety of different foreign languages and working in a multicultural, international environment.</li>
+                    <li class="accordion-text-paragraph">Organizational and project management skills - guiding big or smaller groups (100+ people) in a specific time amount and in limited space, helping with organizing small events.</li>
+                    <li class="accordion-text-paragraph">Ability to identify the needs of the target audience.</li>
+                  </ul>
+                </div>
+                <div class="experiences-description">
+                  <h3>BA and MSc STUDENT <span class="span-slash">|</span> University of Ljubljana</h3>
+                  <h5>Ljubljana, Slovenia | Sep 2005 - Sep 2016</h5>
+                  <ul class="bullet-right dashed">
+                    <li class="accordion-text-paragraph">Two subject pre-Bologna Non Pedagogical Programme: Spanish and History.</li>
+                  </ul>
+                </div>
             </div>
-            <div class="experiences-right-side">
-              <!-- <img src="images/SVGIcons/work.svg" /> -->
-              <div class="work-experiences-icons"></div>
+            </div>
+            <div class="experiences-media-hiding-icon">
+              <div class="experiences-right-side">
+                <div class="work-experiences-icons"></div>
+              </div>
             </div>
           </div>
         </section>
