Not 100%, but still OK

--- a/src/index.html
+++ b/src/index.html
@@ -338,7 +338,7 @@
               <details>
                 <summary class="summary-positioning">
                   <div class="project-icon-container">
-                    <img src="https://via.placeholder.com/75" alt="babushka-image" class="project-icon" />
+                    <img src="./images/projectsIcons/project04.png" alt="truffle-image" class="project-icon" />
                   </div>
                   <h3>PROJECT 04: Truff·l·uxury</h3>
                 </summary>
