Slightly changing experience section (content)

--- a/src/index.html
+++ b/src/index.html
@@ -283,8 +283,8 @@
                   <h3>PERSONAL ASSISTANT <span class="span-slash">|</span> Active Care Group</h3>
                   <h5>Nationwide UK | Feb 2019 - Aug 2021</h5>
                   <ul class="dashed">
-                    <li class="accordion-text-paragraph">Supporting people with spinal cord injury to live an independent and active life.</li>
-                    <li class="accordion-text-paragraph">Outstanding personal qualities applied: respectful, empathetic, reliable, patient, observant, good communication skills.</li>
+                    <li class="accordion-text-paragraph">Supported people with spinal cord injury to live an independent and active life.</li>
+                    <li class="accordion-text-paragraph">Outstanding personal qualities applied: respectful, empathetic, reliable, patient, observant.</li>
                   </ul>
                 </div>
                 <br />
@@ -293,9 +293,9 @@
                   <a href="https://www.postojnska-jama.eu/en/" target="_blank"></a>
                   <h5>Postojna, Slovenia | Jun 2006 - Oct 2018</h5>
                   <ul class="dashed">
-                    <li class="accordion-text-paragraph">Ability to perform, animate and communicate in public in a variety of different foreign languages and working in a multicultural, international environment.</li>
-                    <li class="accordion-text-paragraph">Organizational and project management skills - guiding big or smaller groups (100+ people) in a specific time amount and in limited space, helping with organizing small events.</li>
-                    <li class="accordion-text-paragraph">Ability to identify the needs of the target audience.</li>
+                    <li class="accordion-text-paragraph">Performed with animation and communicated well with the public in a variety of foreign languages, working in a multicultural, international environment.</li>
+                    <li class="accordion-text-paragraph">Applied organisational and project management skills - guiding small and large groups (100+ people) in a specific time frame and in a limited space, assisted with organizing small events.</li>
+                    <li class="accordion-text-paragraph">Identified the needs of the target audience.</li>
                   </ul>
                 </div>
                 <div class="experiences-description">
